# ocr_demo

./: CLAUDE.md  README.md  main.py  pyproject.toml  table_json.json
.claude/: settings.local.json
demos/: DEMO_TEXT_OVERLAY_README.md  create_test_files.py  demo_color_detect.py  demo_color_detect_gradient.py  demo_font_size_detect.py  demo_pdf_render.py  demo_pdf_render_enhanced.py  demo_table_render.py  demo_text_overlay.py  json_translator.py  pdf_utils.py  test-display-formula.json  test-formula-size.json  test-formula.json  test-long-text-table.json  test-simple-table.json  test-table.json  test-title.json  test_color_detection_performance.py  test_replace_function.py  verify_output.py
output/: DEMO_RESULTS.md  ENHANCED_DEMO_RESULTS.md  debug_log.txt  test_input.json
