[project]
name = "ocr-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[socks]>=0.28.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openai>=2.14.0",
    "pillow>=12.0.0",
    "pymupdf>=1.26.6",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "weasyprint>=67.0",
]
